--- a/Website/src/App.css
+++ b/Website/src/App.css
@@ -1,12 +1,13 @@
-/* General body styling */
 body {
   font-family: 'Titillium Web', sans-serif;
   margin: 0;
   padding: 0;
   background: #fff;
+  color: black;
+  height: auto;
+  overflow-x: hidden;
 }
 
-/* About Container */
 .about-container {
   width: 80%;
   padding: 1rem;
@@ -25,11 +26,10 @@ body {
   color: #555;
 }
 
-.about-heading{
+.about-heading {
   font-size: 30px;
 }
 
-/* Divider Styling */
 .divider-container,
 .history-divider-container {
   display: flex;
@@ -50,7 +50,6 @@ body {
 .history-line {
   height: 2px;
   background-color: #003e70;
-  /* background-color: #005cb9 ; */
   flex: 1;
 }
 
@@ -59,29 +58,27 @@ body {
   height: 5px;
   width: 30px;
   background-color: #003e70;
-  /* background-color: #005cb9 ; */
   border-radius: 10px;
 }
 
-/* Dashboard Grid Container */
 .dashboard-grid-container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr); /* Default: 4 columns */
-  gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 16px;
   padding: 40px 20px;
 }
 
-/* Individual grid items */
 .dashboard-grid-item {
-  border: 1px solid #333;
   text-align: center;
+  padding: 16px;
+  border: 1px solid #333;
   border-radius: 8px;
-  padding: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
+  background-color: #fff;
+  color: black;
   width: 250px;
   height: 200px;
-  color: black;
 }
 
 .dashboard-grid-item:hover {
@@ -92,13 +89,11 @@ body {
   border: none;
 }
 
-/* Icons styling */
 .dashboard-grid-item .icon {
   font-size: 40px;
   margin-top: 30px;
 }
 
-/* Titles styling */
 .dashboard-grid-item p {
   font-size: 14px;
   font-weight: 400;
@@ -106,7 +101,6 @@ body {
   margin-top: 50px;
 }
 
-/* Cards Container */
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -160,6 +154,18 @@ body {
   position: relative;
 }
 
+.scrollable-content a {
+  color: black;
+}
+
+.scrollable-content a:hover {
+  text-decoration: underline;
+}
+
+.scrollable-content ul:hover {
+  animation-play-state: paused;
+}
+
 .scrollable-content ul {
   padding: 0;
   margin: 0;
@@ -177,7 +183,7 @@ body {
 .card button {
   width: 200px;
   background-color: #002855;
-  color: gold;
+  color: white;
   border: none;
   border-radius: 10px;
   padding: 10px;
@@ -193,28 +199,202 @@ body {
   transform: translateY(-5px);
   box-shadow: 0 5px 15px rgba(0, 40, 85, 0.3);
   background-color: #004080;
+  color: gold;
 }
 
 .grid-image {
-  width: 80px; /* Adjust to fit your design */
+  width: 80px;
   height: 80px;
   object-fit: contain;
 }
 
-.dashboard-grid-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 16px;
+.news-section {
+  text-align: center;
+  width: 100vw;
+  flex-wrap: wrap;
 }
 
-.dashboard-grid-item {
-  text-align: center;
-  padding: 16px;
-  border: 1px solid #ddd;
+.news-title {
+  font-size: 40px;
+  color: #003e70;
+}
+
+.news-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  
+}
+
+.news-grid {
+  display: flex;
+  gap: 40px;
+  margin: 10px ;
+}
+
+.news-item {
+  width: 270px;
+  height: 320px; 
+  background:  white;
+  border: 1px solid #b4b4b4;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  transition: transform 0.7s ease;
+}
+
+.news-item:hover {
+  transform: scale(1.01);
+}
+
+.news-item img {
+  width: 100%;
+  height: 250px; 
+  object-fit: cover; 
   border-radius: 8px;
 }
 
-/* Animations */
+.news-text {
+  text-align: center;
+}
+
+.news-text h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.news-text p {
+  font-size: 14px;
+  color: #555;
+}
+
+.app {
+  width: 90%;
+}
+
+.arrow-button {
+  background: none;
+  border: none;
+  font-size: 40px;
+  cursor: pointer;
+  color: #999;
+}
+
+.arrow-button:focus {
+  outline: none;
+}
+
+.news-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.arrow-button {
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.news-grid {
+  display: flex;
+  transition: transform 0.3s ease;
+}
+
+.news-item {
+  width: 25%;
+  padding: 10px;
+}
+
+.news-title {
+  text-align: center;
+  font-size: 24px;
+}
+
+.news-text {
+  padding: 10px;
+}
+
+.tab-section {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+  flex-wrap: wrap;
+}
+
+.tab {
+  flex: 1;
+  padding: 10px;
+  margin-left: 100px;
+}
+
+.tab h3 {
+  font-size: 24px;
+  color: black;
+  border-left: 6px solid #005cb9;
+  padding-left: 10px;
+  margin-bottom: 20px;
+}
+
+.tab-content {
+  display: flex;
+  gap: 10px;
+}
+
+.large-card {
+  width: 570px;
+  height: 280px;
+  background: transparent;
+  border-radius: 8px; 
+  transition: transform 0.7s ease;
+}
+
+.large-card:hover {
+  box-shadow: 20px 20px 2px rgba(0, 0, 0, 0);
+  transform: scale(1.01);
+}
+
+.large-card img {
+  width: 100%;
+  height: 100%; 
+  max-height: 100%; 
+  object-fit: cover; 
+  border-radius: 8px;
+}
+
+.small-cards {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+}
+
+.small-card {
+  width: 270px;
+  height: 133px;
+  background: #d3d3d3;
+  border-radius: 8px;
+  transition: transform 0.7s ease;
+}
+
+.small-card:hover {
+  box-shadow: 20px 20px 2px rgba(0, 0, 0, 0);
+  transform: scale(1.01);
+}
+
+.small-card img {
+  width: 100%;
+  height: 100%; 
+  max-height: 100%; 
+  object-fit: cover; 
+  border-radius: 8px;
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -235,7 +415,6 @@ body {
   }
 }
 
-/* Custom scrollbar styling */
 .scrollable-content::-webkit-scrollbar {
   width: 8px;
 }
@@ -249,17 +428,15 @@ body {
   background: #b0b0b0;
 }
 
-/* Media Queries */
-
-/* Large Screens (Desktops) */
 @media (min-width: 1024px) {
   .dashboard-grid-container {
     grid-template-columns: repeat(4, 1fr);
     gap: 30px;
   }
+
+
 }
 
-/* Medium Screens (Tablets) */
 @media (max-width: 1024px) {
   .dashboard-grid-container {
     grid-template-columns: repeat(3, 1fr);
@@ -267,19 +444,17 @@ body {
   }
 }
 
-/* Small Screens (Mobile Phones) */
 @media (max-width: 768px) {
   .dashboard-grid-container {
     grid-template-columns: repeat(2, 1fr);
     gap: 15px;
   }
   .dashboard-grid-item {
-    width: 140px; /* Smaller width for smaller screens */
+    width: 140px;
     height: auto;
   }
 }
 
-/* Extra Small Screens (Very Small Devices) */
 @media (max-width: 480px) {
   .dashboard-grid-container {
     grid-template-columns: 1fr;
@@ -291,3 +466,60 @@ body {
     height: auto;
   }
 }
+
+@media screen and (max-width: 1468px) {
+  .card {
+    width: 275px;
+    height: 400px;
+  }
+}
+
+@media screen and (max-width: 1350px) {
+  .card {
+    width: 230px;
+    height: 400px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .card {
+    width: 220px;
+    height: 400px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .card {
+    width: 350px;
+    height: 400px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .card {
+    width: 200px;
+    height: 350px;
+  }
+
+  .scrollable-content {
+    max-height: 170px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    justify-content: space-between;
+  }
+
+  .card {
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .scrollable-content {
+    max-height: 200px;
+  }
+}
+
+
+
